Full basic + additional tasks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">hw3</string>
+    <string name="open_activity_c">Open activity C</string>
+    <string name="activity_b">Activity B</string>
+    <string name="activity_a">Activity A</string>
+    <string name="enter_color">Enter color</string>
+    <string name="generate_color">Generate color</string>
+    <string name="open_activity_b">Open activity B</string>
+    <string name="activity_c">Activity C</string>
+    <string name="open_activity_a">Open activity A</string>
 </resources>
